# ame-analylics

./: .env_template  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ame_analytics/: postgresql.py
notebooks/: example.ipynb
